--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "express-session": "^1.17.2",
     "hbs": "^4.1.2",
     "mongoose": "^5.12.14"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
