--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "hbs": "^4.1.2",
+    "materialize-css": "^1.0.0-rc.2",
     "mongo-connect": "^0.0.6",
     "mongoose": "^5.12.14"
   },
